tests/spec/compile-pass/078_trust_raw_memory.zn
// category: compile-pass
// profile: freestanding
// trust.rawMemory: true
// purpose: raw memory operations are allowed only inside explicit trust boundaries with manifest capability

module tests.pass.trustRawMemory;

fn readByte(address: USize) -> U8 {
    return trust {
        RawPointer<U8>.fromAddress(address).read()
    };
}
